# ResistanceRatioCalculation

./: .gitignore  CMakeLists.txt  README.md  ResistanceRatioCalculation_zh_CN.ts  main.cpp  rrc.h  电阻比值计算.nb
res/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  ResistanceRatioCalculation_zh_CN.ts  resistance_data.qrc  rrc.ui
src/: about.cpp  about.ui  rrc.cpp  rrc.h  rrc.ui
